# Rivercrab

./: README.2.md  README.md  TRY.md  build-profile.json5  reminder-implicit-resolve.md
.githooks/: commit-msg
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/base/media/: layered_image.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  crab.cpp
entry/src/main/cpp/types/libcrab/: index.d.ts  package.json
entry/src/main/ets/: Default.ets  Last.ets  Secondary.ets  consts.ts  libcrab.d.ts  patch.ts  platform.ts
entry/src/main/ets/app/: App.ts  BackupAbility.ts  DefaultAbility.ts  LastAbility.ts  SecondaryAbility.ts
entry/src/main/ets/avsession/: MediaSession.ets
entry/src/main/ets/controller/: DefaultAbility.ets  DefaultAbility.ts  LastAbility.ts  SecondaryAbility.ts
entry/src/main/ets/extension/: BackupAbility.ts
entry/src/main/ets/page/: Default.ets  Last.ets  Secondary.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/stage/: AbilityStage.ts
entry/src/main/ets/view/: Default.ets  Last.ets  Secondary.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/rawfile/frida/: README.md  agent.js
entry/src/main/ts/: consts.ts  patch.ts
entry/src/main/ts/controller/: DefaultAbility.ts  LastAbility.ts  SecondaryAbility.ts
frida/: README.md
frida/agent/: index.js
hvigor/: hvigor-config.json5
(+2 files in other folders)
